Atualizado com Autenticação, Autorização e Tratamento de Erros

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=10011406
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=create
+# Tirar a opção do StackTrace para um usuário normal
+server.error.include-stacktrace=never
