--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.password=10011406
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 # Tirar a opção do StackTrace para um usuário normal
 server.error.include-stacktrace=never
